[project]
name = "meddreamer-615c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "ruamel-yaml>=0.19.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.2",
]
